# SLR_BOT

./: .gitignore  .gitmodules  CMakeLists.txt  MIS_BOT.cpp  MIS_BOT.sln  MIS_BOT.vcxproj  MIS_BOT.vcxproj.filters  README.md  RefreshJSON.cpp  RefreshJSON.vcxproj  RefreshJSON.vcxproj.filters  SMJ.json  Settings.ini  _FromPostGameBackInTheGame.ahk  settings1.ini  settings2.ini
incl/: Broker.h  CardBaseSMJ.h  DEBUG.h  DataTypes.h  FireBot.h  FireBot_AvoidArea.h  FireBot_BattleTable.h  FireBot_CardPicker.h  FireBot_RejectedComamand.h  FireBot_Thread.h  FireBot_Util.h  LOAD.h  Util.h
lib/: libboost_program_options-vc143-mt-x32-1_78.lib  libboost_program_options-vc143-mt-x64-1_78.lib
src/: Broker.cpp  CardBaseSMJ.cpp  DEBUG.cpp  FireBot.cpp  LOAD.cpp  Util.cpp
